--- a/.github/workflows/ytp_tweaks.yml
+++ b/.github/workflows/ytp_tweaks.yml
@@ -34,10 +34,15 @@ jobs:
           submodules: recursive
 
       - name: Install Dependencies
-        run: brew install make
+        run: brew install make pipx
+
+      - name: pipx
+        run: pipx ensurepath
 
       - name: Set PATH environment variable
-        run: echo "$(brew --prefix make)/libexec/gnubin" >> $GITHUB_PATH
+        run: |
+          echo "$(brew --prefix make)/libexec/gnubin" >> $GITHUB_PATH
+          echo "$(brew --prefix pipx)/libexec/gnubin" >> $GITHUB_PATH
 
       - name: Cache Theos
         id: theos
@@ -69,8 +74,11 @@ jobs:
         env:
           THEOS: ${{ github.workspace }}/theos
 
-      - name: Install Pyzule
-        run: bash -c "$(curl https://raw.githubusercontent.com/asdfzxcvbn/pyzule/main/install-pyzule.sh)"
+      - name: Install Cyan
+        run: |
+          pipx install --force https://github.com/asdfzxcvbn/pyzule-rw/archive/main.zip
+          pipx inject cyan lief
+          pipx inject cyan Pillow
 
       - name: Download YouTube
         id: download_youtube
@@ -144,7 +152,7 @@ jobs:
           THEOS: ${{ github.workspace }}/theos
 
       - name: Inject tweaks into IPA
-        run: pyzule -i ${{ github.workspace }}/youtube.ipa -o ${{ github.workspace }}/YouTubePlus_${{ inputs.tweak_version }}_Tweaks.ipa -w -u -f ${{ github.workspace }}/ytplus.deb ${{ github.workspace }}/OpenYoutubeSafariExtension.appex ${{ github.workspace }}/youpip.deb ${{ github.workspace }}/ytuhd.deb ${{ github.workspace }}/ryd.deb
+        run: cyan -i ${{ github.workspace }}/youtube.ipa -o ${{ github.workspace }}/YouTubePlus_${{ inputs.tweak_version }}_Tweaks.ipa -u -w -s -g -q -m 14.0 -f ${{ github.workspace }}/ytplus.deb ${{ github.workspace }}/OpenYoutubeSafariExtension.appex ${{ github.workspace }}/youpip.deb ${{ github.workspace }}/ytuhd.deb ${{ github.workspace }}/ryd.deb
 
       - name: Upload to GitHub Releases
         uses: softprops/action-gh-release@v2.0.1
