--- a/.github/workflows/ytp_tweaks.yml
+++ b/.github/workflows/ytp_tweaks.yml
@@ -110,42 +110,17 @@ jobs:
 
       - name: Clone YouPiP
         run: |
-          cd ${{ github.workspace }}
-          git clone --quiet --depth=1 https://github.com/PoomSmart/YouPiP.git
+          deb_url="https://poomsmart.github.io/repo/debs/youtube/youpip/com.ps.youpip_1.8.14_iphoneos-arm.deb"
+          wget "$deb_url" --no-verbose -O ${{ github.workspace }}/ytplus.deb
 
       - name: Clone YTUHD
         run: |
-          cd ${{ github.workspace }}
-          git clone --quiet --depth=1 https://github.com/PoomSmart/YTUHD.git
-
+          deb_url="https://poomsmart.github.io/repo/debs/youtube/ytuhd/com.ps.ytuhd_1.5.5_iphoneos-arm.deb"
+          wget "$deb_url" --no-verbose -O ${{ github.workspace }}/youpip.deb
       - name: Clone Return-YouTube-Dislikes
         run: |
-          cd ${{ github.workspace }}
-          git clone --quiet --depth=1 https://github.com/PoomSmart/Return-YouTube-Dislikes.git
-
-      - name: Build YouPiP
-        run: |
-          cd ${{ github.workspace }}/YouPiP
-          make clean package DEBUG=0 FINALPACKAGE=1
-          mv packages/*.deb ${{ github.workspace }}/youpip.deb
-        env:
-          THEOS: ${{ github.workspace }}/theos
-
-      - name: Build YTUHD
-        run: |
-          cd ${{ github.workspace }}/YTUHD
-          make clean package DEBUG=0 FINALPACKAGE=1
-          mv packages/*.deb ${{ github.workspace }}/ytuhd.deb
-        env:
-          THEOS: ${{ github.workspace }}/theos
-
-      - name: Build Return-YouTube-Dislikes
-        run: |
-          cd ${{ github.workspace }}/Return-YouTube-Dislikes
-          make clean package DEBUG=0 FINALPACKAGE=1
-          mv packages/*.deb ${{ github.workspace }}/ryd.deb
-        env:
-          THEOS: ${{ github.workspace }}/theos
+          deb_url="https://repo.chariz.com/debs/Fse5H68N3u07vfZ1wuA9AnU0TWxODBLmpKV8vZqXwJyZyxcLCX_QvhYZnNgMdmZhltgxBqABjm5Ouhv2lCm7xA/weeb.lillie.youtubedislikesreturn_1.12.7_iphoneos-arm.deb"
+          wget "$deb_url" --no-verbose -O ${{ github.workspace }}/ryd.deb
 
       - name: Inject tweaks into IPA
         run: cyan -i ${{ github.workspace }}/youtube.ipa -o ${{ github.workspace }}/YouTubePlus_${{ inputs.tweak_version }}_Tweaks.ipa -u -w -s -g -q -m 14.0 -f ${{ github.workspace }}/ytplus.deb ${{ github.workspace }}/OpenYoutubeSafariExtension.appex ${{ github.workspace }}/youpip.deb ${{ github.workspace }}/ytuhd.deb ${{ github.workspace }}/ryd.deb
